@@ -30,6 +30,10 @@ first option given on the command-line.
 Skip the signature verification step. That is, only verify the sizes and 
 checksums of the files listed in the \fI.changes\fR or \fI.dsc\fR files.
 .TP
+\fB\-\-verbose\fR
+Do not suppress GPG output.
+.TP
+.TP
 .BR \-\-help ", " \-h
 Display a help message and exit successfully.
 .TP
